# multi-ai-tui

./: Cargo.toml
src/: app.rs  config.rs  logging.rs  main.rs
src/app/: chat.rs  input.rs  reconsile.rs  settings.rs
src/app/chat/: backend.rs
