[package]
name = "multi-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.3"
nom = "7.1.3"

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
tokio = { version = "1.38.0", features = ["rt", "net", "macros"] }

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
